--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -94,7 +94,7 @@
   the <acronym title="Emacs Web Wowser">EWW</acronym>
   documentation, then read See <a href=
   "emacspeak_002deww.html">emacspeak-eww</a>.</p>
-  <p>This chapter documents a total of 1217 commands and 914
+  <p>This chapter documents a total of 1218 commands and 914
   options.</p>
   <table class="menu" border="0" cellspacing="0">
     <tr>
@@ -1570,6 +1570,13 @@
       "espeak_002dvoices.html">espeak-voices</a></td>
       <td>&nbsp;&nbsp;</td>
       <td align="left" valign="top">Define Espeak tags.</td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">• <a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
+      <td>&nbsp;&nbsp;</td>
+      <td align="left" valign="top">Additional Hydras For The
+      Emacspeak Desktop.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
