--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2852,11 +2852,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002d_0027-o"><code>C-'
+      "extra_002dmuggles.html#index-C_002d_0027-o"><code>C-'
       o</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2951,11 +2951,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002d_002c-_002f"><code>C-,
+      "extra_002dmuggles.html#index-C_002d_002c-_002f"><code>C-,
       /</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3175,11 +3175,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002d_002e-o"><code>C-.
+      "extra_002dmuggles.html#index-C_002d_002e-o"><code>C-.
       o</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6601,11 +6601,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002dx-_0040-a-_002f"><code>
-      C-x @ a /</code></a>:</td>
+      "extra_002dmuggles.html#index-C_002dx-_0040-a-_002f"><code>C-x
+      @ a /</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6950,11 +6950,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002dx-_0040-s-o"><code>C-x
-      @ s o</code></a>:</td>
+      "extra_002dmuggles.html#index-C_002dx-_0040-s-o"><code>C-x @
+      s o</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -7167,18 +7167,26 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-s_002d_003b"><code>s-;</code></a>:</td>
+      "extra_002dmuggles.html#index-s_002d_0027"><code>s-'</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-s_002dm"><code>s-m</code></a>:</td>
+      "extra_002dmuggles.html#index-s_002d_003b"><code>s-;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html#index-s_002dm"><code>s-m</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
