--- a/manual/espeak_002dvoices.html
+++ b/manual/espeak_002dvoices.html
@@ -23,7 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="g_002dutils.html" rel="next" title="g-utils" />
+  <link href="extra_002dmuggles.html" rel="next" title=
+  "extra-muggles" />
   <link href="emacspeak_002dytel.html" rel="prev" title=
   "emacspeak-ytel" />
   <style type="text/css">
@@ -52,9 +53,10 @@
 <body lang="en" xml:lang="en">
   <span id="espeak_002dvoices"></span>
   <div class="header">
-    <p>Next: <a href="g_002dutils.html" accesskey="n" rel=
-    "next">g-utils</a>, Previous: <a href="emacspeak_002dytel.html"
-    accesskey="p" rel="prev">emacspeak-ytel</a>, Up: <a href=
+    <p>Next: <a href="extra_002dmuggles.html" accesskey="n" rel=
+    "next">extra-muggles</a>, Previous: <a href=
+    "emacspeak_002dytel.html" accesskey="p" rel=
+    "prev">emacspeak-ytel</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
