--- a/manual/g_002dutils.html
+++ b/manual/g_002dutils.html
@@ -23,8 +23,8 @@
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
   <link href="gm_002dnnir.html" rel="next" title="gm-nnir" />
-  <link href="espeak_002dvoices.html" rel="prev" title=
-  "espeak-voices" />
+  <link href="extra_002dmuggles.html" rel="prev" title=
+  "extra-muggles" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -52,8 +52,8 @@
   <span id="g_002dutils"></span>
   <div class="header">
     <p>Next: <a href="gm_002dnnir.html" accesskey="n" rel=
-    "next">gm-nnir</a>, Previous: <a href="espeak_002dvoices.html"
-    accesskey="p" rel="prev">espeak-voices</a>, Up: <a href=
+    "next">gm-nnir</a>, Previous: <a href="extra_002dmuggles.html"
+    accesskey="p" rel="prev">extra-muggles</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -62,10 +62,10 @@
   </div>
   <hr />
   <span id="g_002dutils-1"></span>
-  <h3 class="section">12.227 g-utils</h3>
+  <h3 class="section">12.228 g-utils</h3>
   <p>Common Code e.g. helper functions. Used by modules like
   gphoto, gblogger etc.</p><span id="g_002dutils-Options"></span>
-  <h4 class="subsection">12.227.1 g-utils Options</h4>
+  <h4 class="subsection">12.228.1 g-utils Options</h4>
   <dl>
     <dt id="index-User-Option-860">Variable: <strong>User
     Option</strong> <em>g-atom-edit-filter</em></dt>
