--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -3417,11 +3417,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002dc-_002c"><code>C-c
+      "extra_002dmuggles.html#index-C_002dc-_002c"><code>C-c
       ,</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
