--- a/manual/index.html
+++ b/manual/index.html
@@ -6017,20 +6017,12 @@
                   12.130.3.8
                   emacspeak-muggles-org-table/body</a></li>
                   <li><a id=
-                  "toc-emacspeak_002dmuggles_002dsmartparens_002fbody"
-                  href=
-                  "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dsmartparens_002fbody"
-                  name=
-                  "toc-emacspeak_002dmuggles_002dsmartparens_002fbody">
-                  12.130.3.9
-                  emacspeak-muggles-smartparens/body</a></li>
-                  <li><a id=
                   "toc-emacspeak_002dmuggles_002dtoggle_002doption_002fbody"
                   href=
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dtoggle_002doption_002fbody"
                   name=
                   "toc-emacspeak_002dmuggles_002dtoggle_002doption_002fbody">
-                  12.130.3.10
+                  12.130.3.9
                   emacspeak-muggles-toggle-option/body</a></li>
                   <li><a id=
                   "toc-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
@@ -6038,21 +6030,21 @@
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
                   name=
                   "toc-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody">
-                  12.130.3.11
+                  12.130.3.10
                   emacspeak-muggles-undo-only/undo-redo/body</a></li>
                   <li><a id=
                   "toc-emacspeak_002dmuggles_002dview_002fbody"
                   href=
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dview_002fbody"
                   name=
-                  "toc-emacspeak_002dmuggles_002dview_002fbody">12.130.3.12
+                  "toc-emacspeak_002dmuggles_002dview_002fbody">12.130.3.11
                   emacspeak-muggles-view/body</a></li>
                   <li><a id=
                   "toc-emacspeak_002dmuggles_002dvuiet_002fbody"
                   href=
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dvuiet_002fbody"
                   name=
-                  "toc-emacspeak_002dmuggles_002dvuiet_002fbody">12.130.3.13
+                  "toc-emacspeak_002dmuggles_002dvuiet_002fbody">12.130.3.12
                   emacspeak-muggles-vuiet/body</a></li>
                   <li><a id=
                   "toc-emacspeak_002dmuggles_002dyank_002dpop_002fbody"
@@ -6060,7 +6052,7 @@
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dyank_002dpop_002fbody"
                   name=
                   "toc-emacspeak_002dmuggles_002dyank_002dpop_002fbody">
-                  12.130.3.14
+                  12.130.3.13
                   emacspeak-muggles-yank-pop/body</a></li>
                 </ul>
               </li>
@@ -11385,11 +11377,19 @@
                   "toc-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd">
                   12.227.3.5
                   emacspeak-muggles-pianobar-key-map-cmd</a></li>
+                  <li><a id=
+                  "toc-emacspeak_002dmuggles_002dsmartparens_002fbody"
+                  href=
+                  "extra_002dmuggles.html#emacspeak_002dmuggles_002dsmartparens_002fbody"
+                  name=
+                  "toc-emacspeak_002dmuggles_002dsmartparens_002fbody">
+                  12.227.3.6
+                  emacspeak-muggles-smartparens/body</a></li>
                   <li><a id="toc-emacspeak_002dorigami_002fbody"
                   href=
                   "extra_002dmuggles.html#emacspeak_002dorigami_002fbody"
                   name=
-                  "toc-emacspeak_002dorigami_002fbody">12.227.3.6
+                  "toc-emacspeak_002dorigami_002fbody">12.227.3.7
                   emacspeak-origami/body</a></li>
                 </ul>
               </li>
