--- a/manual/emacspeak_002dcalendar.html
+++ b/manual/emacspeak_002dcalendar.html
@@ -129,6 +129,25 @@ To use, configure variable gweb-my-address via M-x customize-variable.
 </pre>
       </div>
     </dd>
+  </dl><span id=
+  "emacspeak_002dcalendar_002dsunrise_002dsunset"></span>
+  <h4 class="subsubsection">12.32.1.4
+  emacspeak-calendar-sunrise-sunset</h4>
+  <dl>
+    <dt id="index-emacspeak_002dcalendar_002dsunrise_002dsunset">
+    Command: <strong>emacspeak-calendar-sunrise-sunset</strong>
+    <em>(address &amp;optional arg)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dcalendar_002dsunrise_002dsunset-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Display sunrise/sunset for specified address.
+
+(fn ADDRESS &amp;optional ARG)
+</pre>
+      </div>
+    </dd>
   </dl><span id="emacspeak_002dcalendar-Options"></span>
   <h4 class="subsection">12.32.2 emacspeak-calendar Options</h4>
   <dl>
