--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -208,8 +208,26 @@ unless ‘dired-listing-switches’ contains -l
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002ddired_002dshow_002dfile_002dtype"></span>
+  "emacspeak_002ddired_002drpm_002dquery_002din_002ddired"></span>
   <h4 class="subsubsection">12.50.1.10
+  emacspeak-dired-rpm-query-in-dired</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002ddired_002drpm_002dquery_002din_002ddired">
+    Command:
+    <strong>emacspeak-dired-rpm-query-in-dired</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002ddired_002drpm_002dquery_002din_002ddired-1">
+      </span>
+      <div class="format">
+        <pre class="format">Run rpm -qi on current dired entry.
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002ddired_002dshow_002dfile_002dtype"></span>
+  <h4 class="subsubsection">12.50.1.11
   emacspeak-dired-show-file-type</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dshow_002dfile_002dtype">
@@ -230,7 +248,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002daccess_002dtime"></span>
-  <h4 class="subsubsection">12.50.1.11
+  <h4 class="subsubsection">12.50.1.12
   emacspeak-dired-speak-file-access-time</h4>
   <dl>
     <dt id=
@@ -248,7 +266,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dmodification_002dtime"></span>
-  <h4 class="subsubsection">12.50.1.12
+  <h4 class="subsubsection">12.50.1.13
   emacspeak-dired-speak-file-modification-time</h4>
   <dl>
     <dt id=
@@ -267,7 +285,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dpermissions"></span>
-  <h4 class="subsubsection">12.50.1.13
+  <h4 class="subsubsection">12.50.1.14
   emacspeak-dired-speak-file-permissions</h4>
   <dl>
     <dt id=
@@ -286,7 +304,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dsize"></span>
-  <h4 class="subsubsection">12.50.1.14
+  <h4 class="subsubsection">12.50.1.15
   emacspeak-dired-speak-file-size</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dspeak_002dfile_002dsize">
@@ -302,7 +320,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.50.1.15
+  <h4 class="subsubsection">12.50.1.16
   emacspeak-dired-speak-header-line</h4>
   <dl>
     <dt id=
@@ -320,7 +338,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dsymlink_002dtarget"></span>
-  <h4 class="subsubsection">12.50.1.16
+  <h4 class="subsubsection">12.50.1.17
   emacspeak-dired-speak-symlink-target</h4>
   <dl>
     <dt id=
@@ -339,7 +357,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist"></span>
-  <h4 class="subsubsection">12.50.1.17
+  <h4 class="subsubsection">12.50.1.18
   emacspeak-locate-play-results-as-playlist</h4>
   <dl>
     <dt id=
