--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -123,11 +123,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-_003cf1_003e-_0022"><code>&lt;f1&gt;
+      "emacspeak_002dwizards.html#index-_003cf1_003e-_0022"><code>&lt;f1&gt;
       "</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -150,10 +150,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak.html#index-_003cf1_003e-C_002de"><code>&lt;f1&gt;
-      C-e</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003cf1_003e-C_002de"><code>
+      &lt;f1&gt; C-e</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -734,10 +735,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak.html#index-_003cfn_003e-C_002dM_002db"><code>&lt;fn&gt;
-      C-M-b</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003cfn_003e-C_002dM_002db">
+      <code>&lt;fn&gt; C-M-b</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -1462,15 +1464,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-d-m"><code>&lt;fn&gt;
-      d m</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "dtk_002dspeak.html#index-_003cfn_003e-d-N"><code>&lt;fn&gt;
       d N</code></a>:</td>
       <td>&nbsp;</td>
@@ -1632,20 +1625,20 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-I"><code>&lt;fn&gt;
-      I</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dtabulate.html#index-_003cfn_003e-i"><code>&lt;fn&gt;
       i</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dtabulate.html">emacspeak-tabulate</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-_003cfn_003e-I"><code>&lt;fn&gt;
+      I</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -1758,11 +1751,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-M_002dh"><code>&lt;fn&gt;
-      M-h</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003cfn_003e-M_002dh"><code>
+      &lt;fn&gt; M-h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2622,11 +2615,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-_003chelp_003e-_0022"><code>&lt;help&gt;
-      "</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003chelp_003e-_0022"><code>
+      &lt;help&gt; "</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2649,10 +2642,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak.html#index-_003chelp_003e-C_002de"><code>&lt;help&gt;
-      C-e</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003chelp_003e-C_002de"><code>
+      &lt;help&gt; C-e</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2933,11 +2927,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002d_0027-v"><code>C-'
+      "extra_002dmuggles.html#index-C_002d_0027-v"><code>C-'
       v</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3256,11 +3250,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002d_002e-v"><code>C-.
+      "extra_002dmuggles.html#index-C_002d_002e-v"><code>C-.
       v</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -4212,10 +4206,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak.html#index-C_002de-C_002dM_002db"><code>C-e
-      C-M-b</code></a>:</td>
+      "emacspeak_002dwizards.html#index-C_002de-C_002dM_002db"><code>
+      C-e C-M-b</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5082,15 +5077,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-d-m-1"><code>C-e d
-      m</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "dtk_002dspeak.html#index-C_002de-d-N"><code>C-e d
       N</code></a>:</td>
       <td>&nbsp;</td>
@@ -5367,20 +5353,20 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-I"><code>C-e
-      I</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dtabulate.html#index-C_002de-i"><code>C-e
       i</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dtabulate.html">emacspeak-tabulate</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002de-I"><code>C-e
+      I</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5526,11 +5512,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-M_002dh"><code>C-e
+      "emacspeak_002dwizards.html#index-C_002de-M_002dh"><code>C-e
       M-h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6486,11 +6472,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-C_002dh-_0022"><code>C-h
+      "emacspeak_002dwizards.html#index-C_002dh-_0022"><code>C-h
       "</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6513,10 +6499,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak.html#index-C_002dh-C_002de"><code>C-h
+      "emacspeak_002dwizards.html#index-C_002dh-C_002de"><code>C-h
       C-e</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -7031,11 +7018,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html#index-C_002dx-_0040-s-v"><code>C-x
-      @ s v</code></a>:</td>
+      "extra_002dmuggles.html#index-C_002dx-_0040-s-v"><code>C-x @
+      s v</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -7045,6 +7032,42 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002deww.html">emacspeak-eww</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dz-b"><code>C-z
+      b</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dz-e"><code>C-z
+      e</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dz-n"><code>C-z
+      n</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dz-p"><code>C-z
+      p</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td colspan="4">
