--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -70,50 +70,8 @@
   little: It sets up Emacs to load package-specific Emacspeak
   modules as each package is loaded. It implements function
   emacspeak which loads the rest of the system.</p><span id=
-  "Emacspeak-Commands"></span>
-  <h4 class="subsection">12.9.1 Emacspeak Commands</h4><span id=
-  "emacspeak_002ddescribe_002demacspeak"></span>
-  <h4 class="subsubsection">12.9.1.1
-  emacspeak-describe-emacspeak</h4>
-  <dl>
-    <dt id="index-emacspeak_002ddescribe_002demacspeak">Command:
-    <strong>emacspeak-describe-emacspeak</strong></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-h C-e</kbd></dt>
-        <dd><span id="index-C_002dh-C_002de"></span></dd>
-        <dt><kbd>&lt;f1&gt; C-e</kbd></dt>
-        <dd><span id="index-_003cf1_003e-C_002de"></span></dd>
-        <dt><kbd>&lt;help&gt; C-e</kbd></dt>
-        <dd><span id="index-_003chelp_003e-C_002de"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002ddescribe_002demacspeak-1"></span>
-      <div class="format">
-        <pre class="format">Give a brief overview of emacspeak.
-</pre>
-      </div>
-    </dd>
-  </dl><span id="emacspeak_002dsubmit_002dbug"></span>
-  <h4 class="subsubsection">12.9.1.2 emacspeak-submit-bug</h4>
-  <dl>
-    <dt id="index-emacspeak_002dsubmit_002dbug">Command:
-    <strong>emacspeak-submit-bug</strong></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e C-M-b</kbd></dt>
-        <dd><span id="index-C_002de-C_002dM_002db"></span></dd>
-        <dt><kbd>&lt;fn&gt; C-M-b</kbd></dt>
-        <dd><span id=
-        "index-_003cfn_003e-C_002dM_002db"></span></dd>
-      </dl><span id="index-emacspeak_002dsubmit_002dbug-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Function to submit a bug to the programs maintainer.
-</pre>
-      </div>
-    </dd>
-  </dl><span id="emacspeak-Options"></span>
-  <h4 class="subsection">12.9.2 emacspeak Options</h4>
+  "emacspeak-Options"></span>
+  <h4 class="subsection">12.9.1 emacspeak Options</h4>
   <dl>
     <dt id="index-User-Option-15">Variable: <strong>User
     Option</strong>
