--- a/manual/emacspeak_002dauctex.html
+++ b/manual/emacspeak_002dauctex.html
@@ -69,8 +69,85 @@
   <p>Speech-enables the AucTeX package. AucTeX, now available from
   ELPA, has been my authoring environment of choice for writing
   LaTeX since 1991.</p><span id=
-  "emacspeak_002dauctex-Options"></span>
-  <h4 class="subsection">12.20.1 emacspeak-auctex Options</h4>
+  "Emacspeak_002dAuctex-Commands"></span>
+  <h4 class="subsection">12.20.1 Emacspeak-Auctex
+  Commands</h4><span id=
+  "emacspeak_002dauctex_002dcomma_002dat_002dend_002dof_002dword"></span>
+  <h4 class="subsubsection">12.20.1.1
+  emacspeak-auctex-comma-at-end-of-word</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dauctex_002dcomma_002dat_002dend_002dof_002dword">
+    Command:
+    <strong>emacspeak-auctex-comma-at-end-of-word</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dauctex_002dcomma_002dat_002dend_002dof_002dword-1">
+      </span>
+      <div class="format">
+        <pre class=
+        "format">Move to the end of current word and add a comma.
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dauctex_002dend_002dof_002dword"></span>
+  <h4 class="subsubsection">12.20.1.2
+  emacspeak-auctex-end-of-word</h4>
+  <dl>
+    <dt id="index-emacspeak_002dauctex_002dend_002dof_002dword">
+    Command: <strong>emacspeak-auctex-end-of-word</strong>
+    <em>(arg)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dauctex_002dend_002dof_002dword-1"></span>
+      <div class="format">
+        <pre class="format">move to end of word
+
+(fn ARG)
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dauctex_002dlacheck_002dbuffer_002dfile"></span>
+  <h4 class="subsubsection">12.20.1.3
+  emacspeak-auctex-lacheck-buffer-file</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dauctex_002dlacheck_002dbuffer_002dfile">
+    Command:
+    <strong>emacspeak-auctex-lacheck-buffer-file</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dauctex_002dlacheck_002dbuffer_002dfile-1">
+      </span>
+      <div class="format">
+        <pre class="format">Run Lacheck on current buffer.
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dauctex_002dtex_002dtie_002dcurrent_002dword"></span>
+  <h4 class="subsubsection">12.20.1.4
+  emacspeak-auctex-tex-tie-current-word</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dauctex_002dtex_002dtie_002dcurrent_002dword">
+    Command: <strong>emacspeak-auctex-tex-tie-current-word</strong>
+    <em>(n)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dauctex_002dtex_002dtie_002dcurrent_002dword-1">
+      </span>
+      <div class="format">
+        <pre class="format">Tie the next n  words.
+
+(fn N)
+</pre>
+      </div>
+    </dd>
+  </dl><span id="emacspeak_002dauctex-Options"></span>
+  <h4 class="subsection">12.20.2 emacspeak-auctex Options</h4>
   <dl>
     <dt id="index-User-Option-158">Variable: <strong>User
     Option</strong> <em>voice-latex-bold-personality</em></dt>
