--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -7054,6 +7054,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dz-f"><code>C-z
+      f</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dz-n"><code>C-z
       n</code></a>:</td>
       <td>&nbsp;</td>
