--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -368,7 +368,7 @@ The body can be accessed via ‘emacspeak-muggles-org-table/body’.
 The heads for the associated hydra are:
 
 "?":    ‘(emacspeak-hydra-self-help "emacspeak-muggles-toggle-option")’,
-"C-f":    ‘turn-on-folding-mode’,
+"C-f":    ‘(call-interactively #’folding-mode)’,
 "C":    ‘(call-interactively #’flycheck-mode)’,
 "F":    ‘(call-interactively #’flyspell-mode)’,
 "a":    ‘(call-interactively #’abbrev-mode)’,
