--- a/manual/emacspeak_002dorg.html
+++ b/manual/emacspeak_002dorg.html
@@ -122,8 +122,28 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement"></span>
+  "emacspeak_002dorg_002dpopup_002dinput_002dbuffer"></span>
   <h4 class="subsubsection">12.138.1.4
+  emacspeak-org-popup-input-buffer</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dorg_002dpopup_002dinput_002dbuffer">
+    Command: <strong>emacspeak-org-popup-input-buffer</strong>
+    <em>(mode)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dorg_002dpopup_002dinput_002dbuffer-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Provide an input buffer in a specified mode.
+
+(fn MODE)
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement"></span>
+  <h4 class="subsubsection">12.138.1.5
   emacspeak-org-table-speak-both-headers-and-element</h4>
   <dl>
     <dt id=
@@ -141,7 +161,7 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
     </dd>
   </dl><span id=
   "emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader"></span>
-  <h4 class="subsubsection">12.138.1.5
+  <h4 class="subsubsection">12.138.1.6
   emacspeak-org-table-speak-column-header</h4>
   <dl>
     <dt id=
@@ -159,7 +179,7 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
     </dd>
   </dl><span id=
   "emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader_002dand_002delement"></span>
-  <h4 class="subsubsection">12.138.1.6
+  <h4 class="subsubsection">12.138.1.7
   emacspeak-org-table-speak-column-header-and-element</h4>
   <dl>
     <dt id=
@@ -177,7 +197,7 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
     </dd>
   </dl><span id=
   "emacspeak_002dorg_002dtable_002dspeak_002dcoordinates"></span>
-  <h4 class="subsubsection">12.138.1.7
+  <h4 class="subsubsection">12.138.1.8
   emacspeak-org-table-speak-coordinates</h4>
   <dl>
     <dt id=
@@ -195,7 +215,7 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
     </dd>
   </dl><span id=
   "emacspeak_002dorg_002dtable_002dspeak_002dcurrent_002delement"></span>
-  <h4 class="subsubsection">12.138.1.8
+  <h4 class="subsubsection">12.138.1.9
   emacspeak-org-table-speak-current-element</h4>
   <dl>
     <dt id=
@@ -213,7 +233,7 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
     </dd>
   </dl><span id=
   "emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader"></span>
-  <h4 class="subsubsection">12.138.1.9
+  <h4 class="subsubsection">12.138.1.10
   emacspeak-org-table-speak-row-header</h4>
   <dl>
     <dt id=
@@ -231,7 +251,7 @@ and assign  letter ‘h’ to a template that creates the hyperlink on capture.
     </dd>
   </dl><span id=
   "emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader_002dand_002delement"></span>
-  <h4 class="subsubsection">12.138.1.10
+  <h4 class="subsubsection">12.138.1.11
   emacspeak-org-table-speak-row-header-and-element</h4>
   <dl>
     <dt id=
